add ci clippy check

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,18 @@ jobs:
         with:
           command: fmt
           args: --all -- --check
+
+      - name: Run clippy check
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: clippy
+          override: true
+        uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: -- -D warnings
+
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
