--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,6 @@ jobs:
         rust: [stable]
         arcadedb-server: [22.8.1]
     steps:
-
       - uses: actions/checkout@v2
       - name: Starting ArcadeDB Server
         run: |
@@ -26,14 +25,13 @@ jobs:
         env:
           ARCADEDB_VERSION: ${{ matrix.arcadedb-server }}
 
-      - uses: actions/checkout@v2
       - name: Install latest ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
           profile: minimal
           override: true
-          components: rustfmt
+          components: rustfmt , clippy
 
       - name: Run cargo fmt
         uses: actions-rs/cargo@v1
@@ -41,12 +39,8 @@ jobs:
           command: fmt
           args: --all -- --check
 
+
       - name: Run clippy check
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          components: clippy
-          override: true
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
